--- a/public/foods/index.html
+++ b/public/foods/index.html
@@ -177,7 +177,7 @@
             <!-- Card 1 -->
             <div class="flex-shrink-0 w-72 snap-center">
                 <div class="bg-white rounded-t-3xl rounded-b-lg shadow-lg overflow-hidden">
-                    <div class="relative h-48 overflow-hidden mini-carousel" data-card="0">
+                    <div class="relative h-[13.5rem] overflow-hidden mini-carousel" data-card="0">
                         <img src="https://images.unsplash.com/photo-1626082927389-6cd097cdc6ec?w=400&h=300&fit=crop" alt="Grilled Salmon 1" class="carousel-img absolute inset-0 w-full h-full object-cover transition-opacity duration-300 opacity-100">
                         <img src="https://images.unsplash.com/photo-1467003909585-2f8a72700288?w=400&h=300&fit=crop" alt="Grilled Salmon 2" class="carousel-img absolute inset-0 w-full h-full object-cover transition-opacity duration-300 opacity-0">
                         <button class="mini-prev absolute left-2 top-1/2 transform -translate-y-1/2 bg-white bg-opacity-70 hover:bg-opacity-90 text-gray-800 p-1 rounded-full text-sm">‹</button>
@@ -197,7 +197,7 @@
             <!-- Card 2 -->
             <div class="flex-shrink-0 w-72 snap-center">
                 <div class="bg-white rounded-t-3xl rounded-b-lg shadow-lg overflow-hidden">
-                    <div class="relative h-48 overflow-hidden mini-carousel" data-card="1">
+                    <div class="relative h-[13.5rem] overflow-hidden mini-carousel" data-card="1">
                         <img src="https://images.unsplash.com/photo-1600891964092-4316c288032e?w=400&h=300&fit=crop" alt="Garlic Butter Shrimp 1" class="carousel-img absolute inset-0 w-full h-full object-cover transition-opacity duration-300 opacity-100">
                         <img src="https://images.unsplash.com/photo-1565680018434-b513d5e5fd47?w=400&h=300&fit=crop" alt="Garlic Butter Shrimp 2" class="carousel-img absolute inset-0 w-full h-full object-cover transition-opacity duration-300 opacity-0">
                         <button class="mini-prev absolute left-2 top-1/2 transform -translate-y-1/2 bg-white bg-opacity-70 hover:bg-opacity-90 text-gray-800 p-1 rounded-full text-sm">‹</button>
@@ -205,7 +205,7 @@
                     </div>
                     <div class="p-4">
                         <h3 class="text-xl font-bold text-gray-800 mb-2">Garlic Butter Shrimp</h3>
-                        <p class="text-gray-600 mb-2">Succulent shrimp in rich garlic sauce</p>
+                        <p class="text-gray-600 mb-2">Succulent shrimp in garlic sauce</p>
                         <div class="flex justify-between items-center">
                             <span class="text-2xl font-bold text-blue-600">$18.99</span>
                             <button class="bg-blue-500 hover:bg-blue-700 text-white px-4 py-2 rounded-lg transition-colors">Add</button>
@@ -217,7 +217,7 @@
             <!-- Card 3 -->
             <div class="flex-shrink-0 w-72 snap-center">
                 <div class="bg-white rounded-t-3xl rounded-b-lg shadow-lg overflow-hidden">
-                    <div class="relative h-48 overflow-hidden mini-carousel" data-card="2">
+                    <div class="relative h-[13.5rem] overflow-hidden mini-carousel" data-card="2">
                         <img src="https://images.unsplash.com/photo-1432139555190-58524dae6a55?w=400&h=300&fit=crop" alt="Lobster Tail 1" class="carousel-img absolute inset-0 w-full h-full object-cover transition-opacity duration-300 opacity-100">
                         <img src="https://images.unsplash.com/photo-1532550907401-a500c9a57435?w=400&h=300&fit=crop" alt="Lobster Tail 2" class="carousel-img absolute inset-0 w-full h-full object-cover transition-opacity duration-300 opacity-0">
                         <button class="mini-prev absolute left-2 top-1/2 transform -translate-y-1/2 bg-white bg-opacity-70 hover:bg-opacity-90 text-gray-800 p-1 rounded-full text-sm">‹</button>
@@ -237,7 +237,7 @@
             <!-- Card 4 -->
             <div class="flex-shrink-0 w-72 snap-center">
                 <div class="bg-white rounded-t-3xl rounded-b-lg shadow-lg overflow-hidden">
-                    <div class="relative h-48 overflow-hidden mini-carousel" data-card="3">
+                    <div class="relative h-[13.5rem] overflow-hidden mini-carousel" data-card="3">
                         <img src="https://images.unsplash.com/photo-1626645738196-c2a7c87a8f58?w=400&h=300&fit=crop" alt="Seared Scallops 1" class="carousel-img absolute inset-0 w-full h-full object-cover transition-opacity duration-300 opacity-100">
                         <img src="https://images.unsplash.com/photo-1626803775151-61d756612f97?w=400&h=300&fit=crop" alt="Seared Scallops 2" class="carousel-img absolute inset-0 w-full h-full object-cover transition-opacity duration-300 opacity-0">
                         <button class="mini-prev absolute left-2 top-1/2 transform -translate-y-1/2 bg-white bg-opacity-70 hover:bg-opacity-90 text-gray-800 p-1 rounded-full text-sm">‹</button>
@@ -257,7 +257,7 @@
             <!-- Card 5 -->
             <div class="flex-shrink-0 w-72 snap-center">
                 <div class="bg-white rounded-t-3xl rounded-b-lg shadow-lg overflow-hidden">
-                    <div class="relative h-48 overflow-hidden mini-carousel" data-card="4">
+                    <div class="relative h-[13.5rem] overflow-hidden mini-carousel" data-card="4">
                         <img src="https://images.unsplash.com/photo-1626803775151-61d756612f97?w=400&h=300&fit=crop" alt="Grilled Octopus 1" class="carousel-img absolute inset-0 w-full h-full object-cover transition-opacity duration-300 opacity-100">
                         <img src="https://images.unsplash.com/photo-1600891964092-4316c288032e?w=400&h=300&fit=crop" alt="Grilled Octopus 2" class="carousel-img absolute inset-0 w-full h-full object-cover transition-opacity duration-300 opacity-0">
                         <button class="mini-prev absolute left-2 top-1/2 transform -translate-y-1/2 bg-white bg-opacity-70 hover:bg-opacity-90 text-gray-800 p-1 rounded-full text-sm">‹</button>
@@ -282,7 +282,6 @@
   <!-- Foods Section -->
     <div class="text-left py-8 px-4 md:px-8 lg:px-16 xl:px-24">
         <h2 class="text-4xl font-bold text-gray-800 mb-2">Find your perfect real food</h2>
-        <!-- <p class="text-xl text-gray-600">Tailored to your taste:</p> -->
         
         <!-- Horizontal Category Scroller -->
         <div class="category-wrapper mt-4">
@@ -488,7 +487,7 @@
                 <div class="bg-white rounded-t-3xl rounded-b-lg shadow-lg overflow-hidden">
                     <div class="relative h-48 overflow-hidden mini-carousel" data-card="4">
                         <img src="https://images.unsplash.com/photo-1626803775151-61d756612f97?w=400&h=300&fit=crop" alt="Grilled Octopus 1" class="carousel-img absolute inset-0 w-full h-full object-cover transition-opacity duration-300 opacity-100">
-                        <img src="https://images.unsplash.com/photo-1600891964092-4316c288032e?w=400&h=300&fit=crop" alt="Grilled Octopus 2" class="carousel-img absolute inset-0 w-full h-full object-cover transition-opacity duration-300 opacity-0">
+                        <img src="https://images.unsplash.com/photo-1600891964092-4316c288032e?w=400&h=300&fit=crop" alt="Grilled Octopus 2" class="carousel-img absolute inset-0 w-full h-full object-cover h-full object-cover transition-opacity duration-300 opacity-0">
                         <button class="mini-prev absolute left-2 top-1/2 transform -translate-y-1/2 bg-white bg-opacity-70 hover:bg-opacity-90 text-gray-800 p-1 rounded-full text-sm">‹</button>
                         <button class="mini-next absolute right-2 top-1/2 transform -translate-y-1/2 bg-white bg-opacity-70 hover:bg-opacity-90 text-gray-800 p-1 rounded-full text-sm">›</button>
                     </div>
@@ -582,7 +581,7 @@
       <div class="flex flex-col gap-1">
         <h2 class="text-lg font-semibold text-gray-900 line-clamp-2">Our Delicious Promise</h2>
         <p class="text-sm text-gray-600 line-clamp-4 leading-relaxed">
-          If your experience isn't what you expected, we're here to help—we’ll always aim to make it right.
+          If your experience isn't what you expected, we're here to help—we'll always aim to make it right.
         </p>
       </div>
     </div>
@@ -599,7 +598,7 @@
     stroke-linecap="round" 
     stroke-linejoin="round"
   >
-    <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z" />
+    <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z" />
   </svg>
 </div>
 
@@ -722,18 +721,18 @@
                 </svg>
               </a>
               <a href="#" class="text-gray-400 hover:text-orange-500 transition">
-                <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-                  <path d="M12 2.163c3.204 0 3.584.012 4.85.072 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/>
+                <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24  your">
+                  <path d="M12 2.163c3.204 0 3.584.012 4.85.072 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.919-1.266-.057 1.644-.07-4.849 0-3.204-.013-3.583-.07-4.849.149-3.227 1.664-4.771-4.919-4.919-1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0 3.259-.014-3.583.07-4.849-.149-3.227 1.664-4.771-4.919-4.919-1.266-.057 1.645-.069 4.849-.069zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.163 6.162-2.759 6.163 6.163c0-3.403-2.759-6.162-6.162-6.163-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4-4s4 1.791 4 4c0 2.21-1.791 4-4s4 1.791 4 4c0 2.21-1.791 4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/>
                 </svg>
               </a>
               <a href="#" class="text-gray-400 hover:text-orange-500 transition">
                 <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-                  <path d="M22.675 0h-21.35c-.732 0-1.325.593-1.325 1.325v21.351c0 .731.593 1.324 1.325 1.324h11.495v-9.294h-3.128v-3.622h3.128v-2.671c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.795.143v3.24l-1.918.001c-1.504 0-1.795.715-1.795 1.763v2.313h3.587l-.467 3.622h-3.12v9.293h6.116c.73 0 1.323-.593 1.323-1.325v-21.35c0-.732-.593-1.325-1.325-1.325z"/>
+                  <path d="M22.675 0h-21.35c-.732 0-1.325.593-1.325 1.325v21.351c0 .731.593 1.324 1.325 1.324h11.495v-9.294h-3.128v-3.622h3.128v-2.671c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.795.143v3.24l-1.918.001c-1.504 0-1.795.715-1.795 1.763v2.313h3.587l-.467 3.622h-3.12v9.293h6.116c.73 0 1.323-.593 1.323-1.325v-21.35c0-.732-.593-1.325-1.325-1.325 1.324h11.495v-9.294h-3.128v-3.622h3.128v-2.671c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.795.143v3.24l-1.918.001c-1.504 0-1.795.715-1.795 1.763v2.313h3.587l-.467 3.622h-3.12v9.293h6.116c.73 0 1.323-.593 1.323-1.325v-21.35c0-.732-.593-1.325-1.325-1.325z"/>
                 </svg>
               </a>
               <a href="#" class="text-gray-400 hover:text-orange-500 transition">
                 <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-                  <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667h-3.554v-11.452h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zm-15.11-13.019c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019h-3.564v-11.452h3.564v11.452zm15.106-20.452h-20.454c-.979 0-1.771.774-1.771 1.729v20.542c0 .956.792 1.729 1.771 1.729h20.451c.978 0 1.778-.773 1.778-1.729v-20.542c0-.955-.8-1.729-1.778-1.729z"/>
+                  <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667h-3.554v-11.452h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zm-15.11-13.019c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.064 2.065zm1.782 13.019h-3.564v-11.452h3.564v11.452zm15.106-20.452h-20.454c-.979 0-1.771.774-1.771 1.729v20.542c0 .956.792 1.729 1.771 1.729h20.451c.978 0 1.778-.773 1.778-1.729v-20.542c0-.955-.8-1.729-1.778-1.729z"/>
                 </svg>
               </a>
             </div>
