--- a/public/foods/index.html
+++ b/public/foods/index.html
@@ -204,14 +204,45 @@
                         <button class="mini-prev absolute left-2 top-1/2 transform -translate-y-1/2 bg-white bg-opacity-70 hover:bg-opacity-90 text-gray-800 p-1 rounded-full text-sm">‹</button>
                         <button class="mini-next absolute right-2 top-1/2 transform -translate-y-1/2 bg-white bg-opacity-70 hover:bg-opacity-90 text-gray-800 p-1 rounded-full text-sm">›</button>
                     </div>
-                    <div class="p-4">
+                    <!-- <div class="p-4">
                         <h3 class="text-xl font-bold text-gray-800 mb-2">Grilled Salmon</h3>
                         <p class="text-gray-600 mb-2">Fresh Atlantic salmon with herbs</p>
                         <div class="flex justify-between items-center">
                             <span class="text-2xl font-bold text-blue-600">$24.99</span>
                             <button class="bg-blue-500 hover:bg-blue-700 text-white px-4 py-2 rounded-lg transition-colors">Add</button>
                         </div>
-                    </div>
+                    </div> -->
+
+                        <div class="max-w-sm p-4 bg-white rounded-xl shadow-sm border border-gray-100 relative">
+  
+                        <div class="flex items-center gap-2 mb-3">
+                            <span class="bg-orange-500 text-white text-sm font-bold px-2 py-1 rounded-lg">
+                            9.4
+                            </span>
+                            <div class="flex items-center gap-1 text-sm">
+                            <span class="font-semibold text-gray-900">Exceptional</span>
+                            <span class="text-gray-500">(13 reviews)</span>
+                            </div>
+                        </div>
+
+                        <div class="min-h-[3.5rem] flex flex-col justify-start mb-4">
+                            <h3 class="text-lg font-bold text-gray-900 truncate">Tacos Los Cholos</h3>
+                            <p class="text-gray-500 text-sm">Philadelphia</p>
+                        </div>
+
+                        <div class="flex flex-col space-y-0.5">
+                            <span class="text-xl font-bold text-gray-900">$16</span>
+                            <span class="text-xs text-gray-500">$30 for 2 orders</span>
+                            <div class="flex items-center text-green-600 mt-1">
+                            <svg class="w-4 h-4 mr-1" fill="none" stroke="currentColor" stroke-width="3" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 12.75 6 6 9-13.5" />
+                            </svg>
+                            <span class="text-xs font-medium">All fees included</span>
+                            </div>
+                        </div>
+                        </div>
+
+
                 </div>
             </div>
 
