--- a/public/foods/index.html
+++ b/public/foods/index.html
@@ -191,60 +191,56 @@
     <div class="px-4 pb-12 md:px-8 lg:px-16 xl:px-24">
         <div class="flex overflow-x-auto space-x-4 pb-4 snap-x snap-mandatory scrollbar-hide">
             <!-- Card 1 -->
-            <div class="flex-shrink-0 w-72 snap-center">
-                <div class="bg-white rounded-t-3xl rounded-b-lg shadow-lg overflow-hidden relative">
-                    <button class="absolute top-3 right-3 z-10 bg-white rounded-full p-2 shadow-md hover:bg-gray-100 transition-colors">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-red-600" viewBox="0 0 24 24" fill="white" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                            <path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0-7.78z"></path>
-                        </svg>
-                    </button>
-                    <div class="relative h-[13.5rem] overflow-hidden mini-carousel" data-card="0">
-                        <img src="https://images.unsplash.com/photo-1626082927389-6cd097cdc6ec?w=400&h=300&fit=crop" alt="Grilled Salmon 1" class="carousel-img absolute inset-0 w-full h-full object-cover transition-opacity duration-300 opacity-100">
-                        <img src="https://images.unsplash.com/photo-1467003909585-2f8a72700288?w=400&h=300&fit=crop" alt="Grilled Salmon 2" class="carousel-img absolute inset-0 w-full h-full object-cover transition-opacity duration-300 opacity-0">
-                        <button class="mini-prev absolute left-2 top-1/2 transform -translate-y-1/2 bg-white bg-opacity-70 hover:bg-opacity-90 text-gray-800 p-1 rounded-full text-sm">‹</button>
-                        <button class="mini-next absolute right-2 top-1/2 transform -translate-y-1/2 bg-white bg-opacity-70 hover:bg-opacity-90 text-gray-800 p-1 rounded-full text-sm">›</button>
-                    </div>
-                    <!-- <div class="p-4">
-                        <h3 class="text-xl font-bold text-gray-800 mb-2">Grilled Salmon</h3>
-                        <p class="text-gray-600 mb-2">Fresh Atlantic salmon with herbs</p>
-                        <div class="flex justify-between items-center">
-                            <span class="text-2xl font-bold text-blue-600">$24.99</span>
-                            <button class="bg-blue-500 hover:bg-blue-700 text-white px-4 py-2 rounded-lg transition-colors">Add</button>
-                        </div>
-                    </div> -->
+                <div class="flex-shrink-0 w-72 snap-center">
+    <div class="relative overflow-hidden">
+        
+        <button class="absolute top-3 right-3 z-10 bg-white rounded-full p-2 shadow-sm hover:bg-gray-100 transition-colors">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 24 24" fill="white" stroke="#e11d48" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0-7.78z"></path>
+            </svg>
+        </button>
 
-                        <div class="max-w-sm p-4 bg-white rounded-xl shadow-sm border border-gray-100 relative">
-  
-                        <div class="flex items-center gap-2 mb-3">
-                            <span class="bg-orange-500 text-white text-sm font-bold px-2 py-1 rounded-lg">
-                            9.4
-                            </span>
-                            <div class="flex items-center gap-1 text-sm">
-                            <span class="font-semibold text-gray-900">Exceptional</span>
-                            <span class="text-gray-500">(13 reviews)</span>
-                            </div>
-                        </div>
+        <div class="relative h-[13.5rem] overflow-hidden rounded-2xl mini-carousel" data-card="0">
+            <img src="https://images.unsplash.com/photo-1626082927389-6cd097cdc6ec?w=400&h=300&fit=crop" alt="Grilled Salmon 1" class="carousel-img absolute inset-0 w-full h-full object-cover transition-opacity duration-300 opacity-100">
+            <img src="https://images.unsplash.com/photo-1467003909585-2f8a72700288?w=400&h=300&fit=crop" alt="Grilled Salmon 2" class="carousel-img absolute inset-0 w-full h-full object-cover transition-opacity duration-300 opacity-0">
+            <button class="mini-prev absolute left-2 top-1/2 transform -translate-y-1/2 bg-white bg-opacity-70 hover:bg-opacity-90 text-gray-800 p-1 rounded-full text-sm">‹</button>
+            <button class="mini-next absolute right-2 top-1/2 transform -translate-y-1/2 bg-white bg-opacity-70 hover:bg-opacity-90 text-gray-800 p-1 rounded-full text-sm">›</button>
+        </div>
 
-                        <div class="min-h-[3.5rem] flex flex-col justify-start mb-4">
-                            <h3 class="text-lg font-bold text-gray-900 truncate">Tacos Los Cholos</h3>
-                            <p class="text-gray-500 text-sm">Philadelphia</p>
-                        </div>
-
-                        <div class="flex flex-col space-y-0.5">
-                            <span class="text-xl font-bold text-gray-900">$16</span>
-                            <span class="text-xs text-gray-500">$30 for 2 orders</span>
-                            <div class="flex items-center text-green-600 mt-1">
-                            <svg class="w-4 h-4 mr-1" fill="none" stroke="currentColor" stroke-width="3" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 12.75 6 6 9-13.5" />
-                            </svg>
-                            <span class="text-xs font-medium">All fees included</span>
-                            </div>
-                        </div>
-                        </div>
-
-
+        <div class="pt-3 pb-4 px-1 relative">
+            <div class="flex items-center gap-2 mb-2">
+                <span class="bg-orange-500 text-white text-xs font-bold px-2 py-0.5 rounded">
+                    9.4
+                </span>
+                <div class="flex items-center gap-1 text-sm">
+                    <span class="font-semibold text-gray-900">Exceptional</span>
+                    <span class="text-gray-500">(13 reviews)</span>
                 </div>
             </div>
+
+            <div class="mb-2">
+                <h3 class="text-base font-bold text-gray-900 truncate">Tacos Los Cholos</h3>
+                <p class="text-gray-500 text-sm">Philadelphia</p>
+            </div>
+
+            <div class="flex flex-col">
+                <span class="text-lg font-bold text-gray-900">$16</span>
+                <span class="text-xs text-gray-400">$30 for 2 orders</span>
+                
+                <div class="flex items-center text-green-600 mt-1">
+                    <svg class="w-3.5 h-3.5 mr-1" fill="none" stroke="currentColor" stroke-width="3" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 12.75 6 6 9-13.5" />
+                    </svg>
+                    <span class="text-xs font-medium">All fees included</span>
+                </div>
+            </div>
+
+            <a href="#" class="absolute inset-0 z-10">
+                <span class="sr-only">View Details</span>
+            </a>
+        </div>
+    </div>
+</div>
 
             <!-- Card 2 -->
             <div class="flex-shrink-0 w-72 snap-center">
