--- a/public/foods/index.html
+++ b/public/foods/index.html
@@ -191,8 +191,8 @@
     <div class="px-4 pb-12 md:px-8 lg:px-16 xl:px-24">
         <div class="flex overflow-x-auto space-x-4 pb-4 snap-x snap-mandatory scrollbar-hide">
             <!-- Card 1 -->
-                <div class="flex-shrink-0 w-72 snap-center">
-    <div class="relative overflow-hidden">
+            <div class="flex-shrink-0 w-72 snap-center">
+                <div class="relative overflow-hidden">
         
         <button class="absolute top-3 right-3 z-10 bg-white rounded-full p-2 shadow-sm hover:bg-gray-100 transition-colors">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 24 24" fill="white" stroke="#e11d48" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
@@ -207,7 +207,7 @@
             <button class="mini-next absolute right-2 top-1/2 transform -translate-y-1/2 bg-white bg-opacity-70 hover:bg-opacity-90 text-gray-800 p-1 rounded-full text-sm">›</button>
         </div>
 
-        <div class="pt-3 pb-4 px-1 relative">
+        <section class="pt-3 pb-4 px-1 relative">
             <div class="flex items-center gap-2 mb-2">
                 <span class="bg-orange-500 text-white text-xs font-bold px-2 py-0.5 rounded">
                     9.4
@@ -239,7 +239,7 @@
             <a href="#" class="absolute inset-0 z-10">
                 <span class="sr-only">View Details</span>
             </a>
-        </div>
+        </section>
     </div>
 </div>
 
