--- a/public/foods/index.html
+++ b/public/foods/index.html
@@ -1518,7 +1518,7 @@
     <div class="px-4 pb-12 md:px-8 lg:px-16 xl:px-24">
 
           <!-- Banner 2 -->
-        <section class="w-full rounded-3xl border border-gray-200 p-6 md:p-10 shadow-sm mt-12 mb-12" style="background-color: #EBF5FF;">
+        <section class="w-full rounded-3xl border border-gray-200 px-6 py-4 md:px-10 md:py-6 shadow-sm mt-12 mb-12" style="background-color: #EBF5FF;">
             <div class="grid grid-cols-1 gap-8 md:grid-cols-3">
                 <div class="flex items-start gap-4">
                     <div class="flex h-12 w-12 shrink-0 items-center justify-center rounded-full bg-blue-600 text-white">
@@ -1559,7 +1559,7 @@
             </div>
         </section>
 
-        
+
         <!-- Banner 1 -->
         <div class="relative w-full h-[557px] rounded-3xl overflow-hidden mb-6" style="background-image: url('../img/happy_faces/n.png'); background-size: cover; background-position: center; background-repeat: no-repeat;">
             <div class="absolute inset-0 bg-black bg-opacity-30 flex items-center">
