--- a/public/foods/index.html
+++ b/public/foods/index.html
@@ -1553,40 +1553,17 @@
         </div>
 
         <section class="pt-3 pb-4 px-1 relative">
-            <div class="flex items-center gap-2 mb-2">
-                <span class="bg-orange-500 text-white text-xs font-bold px-2 py-0.5 rounded">
-                    9.4
-                </span>
-                <div class="flex items-center gap-1 text-sm">
-                    <span class="font-semibold text-gray-900">Exceptional</span>
-                    <span class="text-gray-500">(13 reviews)</span>
-                </div>
-            </div>
 
             <div class="mb-2">
-                <h3 class="text-xl font-bold text-gray-900 truncate">Outdoor 1</h3>
-                
-                <p class="text-black text-base">DC</p>
+                <h3 class="text-xl font-bold text-gray-900 truncate">DC</h3>
             </div>
 
-            <div class="flex flex-col">
-                <span class="text-xl font-bold text-gray-900">$16</span>
-                <span class="text-xs text-black">$30 for 2 people</span>
-                
-                <div class="flex items-center text-green-600 mt-1">
-                    <svg class="w-3.5 h-3.5 mr-1" fill="none" stroke="currentColor" stroke-width="3" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 12.75 6 6 9-13.5" />
-                    </svg>
-                    <span class="text-xs font-medium text-green-700">All fees included</span>
-                </div>
-            </div>
-
-            <a href="#" class="absolute inset-0 z-10">
-                <span class="sr-only">View Details</span>
-            </a>
         </section>
     </div>
 </div>
+
+<!-- card 1.2 -->
+
 
 
 
